# nn-wasm

./: .gitignore  Cargo.toml  README.md  build.sh  gen_model.py  package-lock.json  pyproject.toml
js/: index.js
src/: lib.rs  main.rs
static/: index.html
variables/: variables.index
