# You must change these to your own details.
[package]
name = "wasm_tract"
version = "0.1.0"
readme = "README.md"
edition = "2018"

[lib]
# path = "src/lib.rs"
crate-type = ["cdylib"]


[features]
default = ["console_error_panic_hook"]


[dependencies]
image = "0.23.14"
tract-onnx = "0.15.3"
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.75"
wasm-bindgen-futures = "0.4.25"

# tokio = { version = "1", features = ["full"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
reqwest = { version = "0.11.4" }


[dependencies.web-sys]
version = "0.3.52"
features = [
    'console',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
