[tool.poetry]
name = "wasm-tch"
version = "0.1.0"
description = ""
authors = ["ezhang7423 <ezhang7423@student.palomar.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.6.0"
tf2onnx = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
